# OpenDriver-VR

./: .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
docs/: BUILDING_WINDOWS.md  CHANGELOG.md  DEVELOPER_GUIDE.md  DOCS.md  OpenDriver1.2.md  PLUGINS_API.md
driver/: driver.vrdrivermanifest
driver/resources/input/: opendriver_hmd_legacy_bindings.json  opendriver_hmd_profile.json  opendriver_hmd_vrcompositor_bindings.json
drivers/opendriver/: driver.vrdrivermanifest  driver.vrresources
drivers/opendriver/resources/settings/: default.vrsettings
include/opendriver/core/: bridge.h  config_manager.h  device_registry.h  dynlib.h  event_bus.h  ipc.h  iui_provider.h  logger.h  mapper.h  platform.h  plugin_interface.h  plugin_loader.h  process_utils.h  runtime.h
openvr/headers/: openvr.h  openvr_api.cs  openvr_api.json  openvr_capi.h  openvr_driver.h
scripts/: build_android.ps1  install.ps1  install_driver.ps1  install_driver.sh
src/: main.cpp
src/core/: config_manager.cpp  device_registry.cpp  event_bus.cpp  ipc_linux.cpp  ipc_platform.cpp  logger.cpp  plugin_loader.cpp  process_utils.cpp  runtime.cpp
src/driver/: driver_opendriver.cpp  drm_lease_shim.cpp
src/driver/video/: mf_encoder.cpp  mf_encoder.h  stan_mf_encoder.txt  video_encoder.h
src/ui/: device_model.cpp  device_model.h  main.cpp  main_window.cpp  main_window.h  plugin_model.cpp  plugin_model.h
